--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,4 @@ production:
   database: kokoromi_production
   username: kokoromi
   password: <%= ENV['KOKOROMI_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
